# cubrid-backup-api

./: CMakeLists.txt  README.md  build.sh
samples/: CMakeLists.txt  cubrid_backup.c  cubrid_restore.c
src/: CMakeLists.txt  backup_api.c  backup_core.c  backup_manager.c  handle_manager.c
src/include/: backup_api.h  backup_common.h  backup_core.h  backup_manager.h  handle_manager.h
test/: CMakeLists.txt  bk_test01.c  bk_test02.c  bk_test03.c  conf_test.sh  cubrid_backup.conf  rs_test01.c  rs_test02.c  rs_test03.c  run_test.sh
testcases/: CMakeLists.txt  backup_tc01.c  backup_tc02.c  backup_tc03.c  backup_tc04.c  conf_test.sh  cubrid_backup.conf  restore_tc01.c  restore_tc02.c  restore_tc03.c  run_test.sh
